@@ -75,6 +75,7 @@ PHP_METHOD(webObj, __get)
     else IF_GET_STRING("imagepath", php_web->web->imagepath)
     else IF_GET_STRING("template", php_web->web->template)
     else IF_GET_STRING("imageurl", php_web->web->imageurl)
+    else IF_GET_STRING("temppath", php_web->web->temppath)
     else IF_GET_STRING("header", php_web->web->header)
     else IF_GET_STRING("footer", php_web->web->footer)
     else IF_GET_STRING("empty", php_web->web->empty)
@@ -116,6 +117,7 @@ PHP_METHOD(webObj, __set)
     else IF_SET_STRING("imagepath", php_web->web->imagepath, value)
     else IF_SET_STRING("template", php_web->web->template, value)
     else IF_SET_STRING("imageurl", php_web->web->imageurl, value)
+    else IF_SET_STRING("temppath", php_web->web->temppath, value)
     else IF_SET_STRING("header", php_web->web->header, value)
     else IF_SET_STRING("footer", php_web->web->footer, value)
     else IF_SET_STRING("mintemplate", php_web->web->mintemplate, value)
